<resources>
    <string name="history">History</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="delete">Delete</string>
    <string name="history_chart_week">Week</string>
    <string name="history_chart_month">Month</string>
    <string name="history_chart_year">Year</string>
    <string name="accessibility_previous">previous</string>
    <string name="accessibility_next">next</string>
    <string name="add_entry">Add entry</string>
    <string name="data_load_failure">Something went wrong, try again later</string>
    <string name="save_failure">An error occurred while saving your data, try again later</string>
    <string name="add_drink_entry">Add Drink Entry</string>
    <string name="drink">Drink</string>
    <string name="date">Date</string>
    <string name="volume">Volume</string>
    <string name="select_drink">Select a drink</string>
</resources>